--- a/style.css
+++ b/style.css
@@ -1,45 +1,54 @@
 body {
-  background-color: #092B40;
-  font-family: 'Inconsolata';
+  background-color: #436780;
 }
 
-.heading {
-  color: #ffffff;
-  padding-top: 50px;
-  font-size:42px;
-}
-.content a {
-  text-decoration: none;
-  color: #ffffff;
-}
-.results {
-  font-size: 20px;
+.container {
+  width: 400px;
   margin: auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  padding: 5px 10px 5px 10px;
-  width: 75%;
-  color:#ffffff;
-  border: 1px solid #A4D0EF;
-  background-color:#354D67;
+  background-color: #FEFFEF;
+  font-family: 'Source Code Pro', ;
 }
 
-.text {
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 30px;
+.screen {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: right;
+  border: solid 1px gray;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  background-color: #7C8F9E;
+  color: #fff;
 }
 
-input[type=text] {
-  width: 260px;
-  border: 1px solid #AAA;
-  padding-right: -35px;
-  height: 22px;
-  font-size: .8em;
-  padding-left: 2px;
+.btn {
+  font-size: 24px;
+  padding: 10px;
 }
 
-a:hover {
-  text-decoration: none;
-  color: #ffffff;
+.button {
+  border: solid 1px gray;
+  text-align: center;
+  margin: 10px;
+  border-radius: 4px;
+  font-size: 24px;
+}
+
+.operation {
+  font-weight: bold;
+  background-color: #7C8F9E;
+  color: #fff;
+}
+
+.clear {
+  background-color: #E17970;
+  color: #FFF;
+}
+
+.container {
+  border: solid 1px gray;
+  padding: 20px;
+}
+
+a {
+  display: block;
 }
